add login and database

--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@
     </div>
   </section>
 
+  <section class="events">
+    <div class="container">
+      <h2>Upcoming Events</h2>
+      <div id="eventContainer">
+        <!-- Events from the database will be loaded here -->
+      </div>
+    </div>
+  </section>
+
   <footer>
     <div class="container">
       <div class="footer-grid">
