--- a/JP College of Science.html
+++ b/JP College of Science.html
@@ -277,7 +277,7 @@
               <div class="submenu">
                 <a href="#">School</a>
                 <div class="submenu-content">
-                    <a href="#">SVM School</a>
+                    <a href="SVM_School.html">SVM School</a>
                 </div>
               </div>
             </div>
