--- a/SVMIT College.html
+++ b/SVMIT College.html
@@ -196,6 +196,7 @@
         grid-template-columns: 1fr;
       }
     }
+    
   </style>
 </head>
 <body>
@@ -234,13 +235,13 @@
             <div class="dropdown-content">
               <a href="JP College of Arts.html" class="dropdown-item active">JP College of Arts</a>
               <a href="JP College of Science.html" class="dropdown-item">JP College of Science</a>
-              <a href="#" class="dropdown-item">SVMIT College</a>
+              <a href="SVMIT College.html" class="dropdown-item">SVMIT College</a>
               <a href="#" class="dropdown-item">MK College of commerce</a>
               <a href="#" class="dropdown-item">MK College of Arts</a>
               <div class="submenu">
                 <a href="#">School</a>
                 <div class="submenu-content">
-                    <a href="#">SVM School</a>
+                    <a href="SVM_School.html">SVM School</a>
                 </div>
               </div>
             </div>
