--- a/JP College of Arts.html
+++ b/JP College of Arts.html
@@ -272,6 +272,7 @@
               <a href="JP College of Arts.html" class="dropdown-item active">JP College of Arts</a>
               <a href="JP College of Science.html" class="dropdown-item">JP College of Science</a>
               <a href="SVMIT College.html" class="dropdown-item">SVMIT College</a>
+              <a href="MK collage of commerce.html" class="dropdown-item">MK Collage of Commerce</a>
               <a href="#" class="dropdown-item">MK College of commerce</a>
               <a href="#" class="dropdown-item">MK College of Arts</a>
               <div class="submenu">
