--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a href="/template/JP College of Science.html" class="dropdown-item">JP College of Science</a>
               <a href="/template/SVMIT College.html" class="dropdown-item">SVMIT College</a>
               <a href="/template/MK collage of commerce.html" class="dropdown-item">MK College of Commerce</a>
-              <a href="#" class="dropdown-item">MK College of Arts</a>
+              <a href="/template/MK collage of Arts.html" class="dropdown-item">MK College of Arts</a>
               <div class="submenu">
                 <a href="#">School</a>
                 <div class="submenu-content">
