--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -55,6 +55,7 @@
     <img src="/SVM/assets/images/logo.jpg" alt="SVM Logo">
     <h2>Admin</h2>
     <a href="manage_events.php">Manage Events</a>
+    <a href="manage_image.php">Manage Images</a>
     <!-- Add more links here if needed -->
   </div>
 
