--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Admin Home - SVMIT</title>
+  <title>Admin Home - SVM</title>
   <style>
     body {
       margin: 0;
@@ -54,6 +54,7 @@
   <div class="sidebar">
     <img src="/SVM/assets/images/logo.jpg" alt="SVM Logo">
     <h2>Admin</h2>
+    <a href="admin_home.html">Home</a>
     <a href="manage_events.php">Manage Events</a>
     <a href="manage_image.php">Manage Images</a>
     <!-- Add more links here if needed -->
