manage principal and add event button

--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -57,6 +57,7 @@
     <a href="admin_home.html">Home</a>
     <a href="manage_events.php">Manage Events</a>
     <a href="manage_image.php">Manage Images</a>
+    <a href="manage_principal.php">Manage Principal</a>
     <!-- Add more links here if needed -->
   </div>
 
